--- a/css/fa/main.css
+++ b/css/fa/main.css
@@ -57,6 +57,10 @@ h1, h2, h3, h4, h5, h6, span, a, li {
   flex-direction: column;
   direction: rtl;
 }
+.container a {
+  text-decoration: none;
+  color: inherit;
+}
 .container .fsymbol {
   font-size: 40rem;
   font-family: "Mf Queen Leela", serif;
@@ -683,7 +687,7 @@ h1, h2, h3, h4, h5, h6, span, a, li {
   text-decoration: none;
 }
 .container .categories-noback .cats-title ul a:hover {
-  color: #c28fb8;
+  color: #bd8cbf;
 }
 .container .categories-noback .items-wrapper {
   display: flex;
@@ -696,7 +700,7 @@ h1, h2, h3, h4, h5, h6, span, a, li {
   display: flex;
   flex-direction: column;
   font-size: 2rem;
-  width: 340px;
+  width: 300px;
   align-items: center;
   margin: 25px;
 }
