--- a/css/fa/main.scss
+++ b/css/fa/main.scss
@@ -79,6 +79,10 @@ h1, h2, h3, h4, h5, h6, span, a, li {
   flex-direction: column;
   direction: rtl;
 
+  a {
+    text-decoration: none;
+    color: inherit;
+  }
 
   .fsymbol {
     font-size: 40rem;
@@ -823,7 +827,7 @@ h1, h2, h3, h4, h5, h6, span, a, li {
           text-decoration: none;
 
           &:hover {
-            color: #c28fb8;
+            color: $purple;
           }
         }
       }
@@ -842,7 +846,7 @@ h1, h2, h3, h4, h5, h6, span, a, li {
         display: flex;
         flex-direction: column;
         font-size: 2rem;
-        width: 340px;
+        width: 300px;
         align-items: center;
         margin: 25px;
 
