Product details (en/fa) details reconstructed

--- a/css/fa/main.css
+++ b/css/fa/main.css
@@ -1767,7 +1767,6 @@ h1, h2, h3, h4, h5, h6, span, a, li {
   justify-content: center;
   align-items: center;
   position: relative;
-  font-family: "IRANSansWeb", "Microsoft JhengHei Light", serif;
 }
 .container .product-preview .product img {
   width: 550px;
@@ -1791,17 +1790,22 @@ h1, h2, h3, h4, h5, h6, span, a, li {
 }
 .container .product-preview .details .images .image {
   display: flex;
+  width: 4em;
   margin: 15px 40px 0 0;
+  height: 4em;
+  overflow: hidden;
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
+  border-radius: 20px;
+}
+.container .product-preview .details .images .image:hover {
+  border: 3px solid #bd8cbf;
+  padding: 5px;
 }
 .container .product-preview .details .images .image img {
-  width: 4em;
-  height: 4em;
-  border-radius: 20px;
-  box-sizing: border-box;
+  height: 100%;
   cursor: pointer;
-}
-.container .product-preview .details .images .image img:hover {
-  border: 3px solid #bd8cbf;
 }
 .container .product-info {
   display: flex;
