--- a/css/en/main.scss
+++ b/css/en/main.scss
@@ -2244,10 +2244,11 @@ body {
 
       .title {
         margin-block-end: 0;
+        font-weight: 500;
       }
 
       .models {
-        padding: 5px 0;
+        padding: 7px 0 15px 0;
 
         .model {
           padding: 5px 32px;
@@ -2270,7 +2271,7 @@ body {
       display: flex;
       justify-content: space-between;
       width: 320px;
-      padding: 10px;
+      padding: 3px 10px;
 
       .property {
         font-size: 1.2rem;
@@ -2297,13 +2298,13 @@ body {
 
       .text {
         color: $darker;
-        font-family: "Lato hairline", serif;
 
         h3 {
           margin-block-end: 0;
-
+          font-weight: 300;
           span {
             padding-left: 15px;
+            font-weight: 300;
           }
         }
 
