--- a/css/en/main.scss
+++ b/css/en/main.scss
@@ -78,7 +78,7 @@ body {
   flex-direction: column;
   overflow: hidden;
 
-  a{
+  a {
     text-decoration: none;
     color: inherit;
   }
@@ -1070,6 +1070,10 @@ body {
       display: flex;
       flex: 1 1 0;
 
+      h4, h5 {
+        font-weight: 400;
+      }
+
       .text-wrapper {
         display: flex;
         flex: 4 1 0;
@@ -1130,6 +1134,7 @@ body {
     h5 {
       padding: 5%;
       line-height: 2;
+      font-weight: 400;
     }
   }
 
@@ -1137,6 +1142,10 @@ body {
     display: flex;
     flex-wrap: wrap;
     width: 100%;
+
+    h4, h5 {
+      font-weight: 400;
+    }
 
     .text-wrapper {
       flex: 1 1 auto;
@@ -1901,6 +1910,7 @@ body {
     flex-direction: column;
     background-color: $darkest;
     padding-bottom: 20px;
+
     h1 {
       font-style: italic;
       font-size: 4.5rem;
@@ -2302,6 +2312,7 @@ body {
         h3 {
           margin-block-end: 0;
           font-weight: 300;
+
           span {
             padding-left: 15px;
             font-weight: 300;
