--- a/css/fa/main.css
+++ b/css/fa/main.css
@@ -704,6 +704,9 @@ h1, h2, h3, h4, h5, h6, span, a, li {
   align-items: center;
   margin: 25px;
 }
+.container .categories-noback .items-wrapper .item a {
+  text-align: center;
+}
 .container .categories-noback .items-wrapper .item img {
   width: 100%;
   height: 320px;
