--- a/css/fa/main.scss
+++ b/css/fa/main.scss
@@ -850,6 +850,10 @@ h1, h2, h3, h4, h5, h6, span, a, li {
         align-items: center;
         margin: 25px;
 
+        a {
+          text-align: center;
+        }
+
         img {
           width: 100%;
           height: 320px;
