--- a/css/fa/main.css
+++ b/css/fa/main.css
@@ -689,6 +689,9 @@ h1, h2, h3, h4, h5, h6, span, a, li {
 .container .categories-noback .cats-title ul a:hover {
   color: #bd8cbf;
 }
+.container .categories-noback .cats-title ul li.selected a {
+  color: #bd8cbf;
+}
 .container .categories-noback .items-wrapper {
   display: flex;
   margin: auto;
@@ -712,6 +715,7 @@ h1, h2, h3, h4, h5, h6, span, a, li {
   height: 320px;
   object-fit: contain;
   border-bottom: solid 3px #EEEEEE;
+  padding: 5px;
 }
 .container .categories-noback .items-wrapper .item span {
   padding: 5px 10px;
