--- a/css/en/main.css
+++ b/css/en/main.css
@@ -82,12 +82,14 @@ body {
   background-image: url("../../img/girl.jpg");
   background-size: cover;
   background-position: center;
+  position: relative;
 }
 .container section.home .logo {
   position: absolute;
   margin: 10px 25px;
   left: 0;
   top: 0;
+  z-index: 8;
 }
 .container section.home .logo img {
   width: 100px;
@@ -98,6 +100,9 @@ body {
   display: flex;
   width: 100%;
   justify-content: center;
+  position: absolute;
+  z-index: 8;
+  top: 0;
 }
 .container section.home .navbar .nav {
   display: flex;
@@ -136,6 +141,7 @@ body {
   width: 100%;
   height: 150px;
   bottom: 0;
+  z-index: 8;
 }
 .container section.home .description .home-title {
   color: white;
@@ -2821,6 +2827,10 @@ svg {
   user-select: none;
   cursor: all-scroll;
   z-index: 6;
+}
+
+.slider-container.v100 {
+  height: 100vh;
 }
 
 .slider-control {
