--- a/css/en/main.scss
+++ b/css/en/main.scss
@@ -108,12 +108,14 @@ body {
     background-image: url("../../img/girl.jpg");
     background-size: cover;
     background-position: center;
+    position: relative;
 
     .logo {
       position: absolute;
       margin: 10px 25px;
       left: 0;
       top: 0;
+      z-index: 8;
 
       img {
         width: 100px;
@@ -126,7 +128,9 @@ body {
       display: flex;
       width: 100%;
       justify-content: center;
-
+      position: absolute;
+      z-index: 8;
+top:0;
 
       .nav {
         display: flex;
@@ -170,6 +174,7 @@ body {
       width: 100%;
       height: 150px;
       bottom: 0;
+      z-index: 8;
 
       .home-title {
         color: white;
@@ -3423,6 +3428,10 @@ svg {
   user-select: none;
   cursor: all-scroll;
   z-index: 6;
+}
+
+.slider-container.v100{
+  height: 100vh;
 }
 
 .slider-control {
