--- a/css/fa/main.css
+++ b/css/fa/main.css
@@ -83,12 +83,14 @@ h1, h2, h3, h4, h5, h6, span, a, li {
   background-image: url("../../img/girl.jpg");
   background-size: cover;
   background-position: center;
+  position: relative;
 }
 .container section.home .logo {
   position: absolute;
   margin: 10px 25px;
   left: 0;
   top: 0;
+  z-index: 8;
 }
 .container section.home .logo img {
   width: 100px;
@@ -99,6 +101,9 @@ h1, h2, h3, h4, h5, h6, span, a, li {
   display: flex;
   width: 100%;
   justify-content: center;
+  position: absolute;
+  z-index: 8;
+  top: 0;
 }
 .container section.home .navbar .nav {
   display: flex;
@@ -137,6 +142,7 @@ h1, h2, h3, h4, h5, h6, span, a, li {
   width: 100%;
   height: 150px;
   bottom: 0;
+  z-index: 8;
 }
 .container section.home .description .home-title {
   color: white;
@@ -2818,6 +2824,10 @@ svg {
   cursor: all-scroll;
   overflow: hidden;
   z-index: 6;
+}
+
+.slider-container.v100 {
+  height: 100vh;
 }
 
 .slider-control {
