--- a/css/fa/main.scss
+++ b/css/fa/main.scss
@@ -109,12 +109,14 @@ h1, h2, h3, h4, h5, h6, span, a, li {
     background-image: url("../../img/girl.jpg");
     background-size: cover;
     background-position: center;
+    position: relative;
 
     .logo {
       position: absolute;
       margin: 10px 25px;
       left: 0;
       top: 0;
+      z-index: 8;
 
       img {
         width: 100px;
@@ -127,7 +129,9 @@ h1, h2, h3, h4, h5, h6, span, a, li {
       display: flex;
       width: 100%;
       justify-content: center;
-
+      position: absolute;
+      z-index: 8;
+      top: 0;
 
       .nav {
         display: flex;
@@ -171,6 +175,7 @@ h1, h2, h3, h4, h5, h6, span, a, li {
       width: 100%;
       height: 150px;
       bottom: 0;
+      z-index: 8;
 
       .home-title {
         color: white;
@@ -1092,7 +1097,7 @@ h1, h2, h3, h4, h5, h6, span, a, li {
       display: flex;
       flex: 1 1 0;
 
-      h4,h5{
+      h4, h5 {
         margin: 0;
       }
 
@@ -3407,6 +3412,10 @@ svg {
   z-index: 6;
 }
 
+.slider-container.v100 {
+  height: 100vh;
+}
+
 .slider-control {
   z-index: 2;
   position: absolute;
@@ -3698,6 +3707,7 @@ svg {
     }
   }
 }
+
 /* about us slider slide show */
 
 @keyframes tilt-up {
