--- a/css/en/main.css
+++ b/css/en/main.css
@@ -1385,12 +1385,9 @@ body {
 .container .gooddesign-slide {
   display: flex;
   position: relative;
-  background-image: url("../../img/waves.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   flex-direction: column;
-  padding: 40px 0;
-  border-top: 15px white solid;
 }
 .container .gooddesign-slide * {
   margin-block-start: 0;
@@ -1421,12 +1418,13 @@ body {
 }
 .container .gooddesign-slide .image-object {
   position: absolute;
-  left: 48%;
-  top: 20px;
+  right: 10%;
+  top: calc(50% - 249px);
   width: 330px;
   padding: 20px;
   transition: 0.3s ease;
   filter: drop-shadow(-15px 0 16px #444444aa);
+  z-index: 8;
 }
 .container .gooddesign-slide .image-object img {
   width: 100%;
