--- a/css/fa/main.scss
+++ b/css/fa/main.scss
@@ -1690,12 +1690,12 @@ h1, h2, h3, h4, h5, h6, span, a, li {
   .gooddesign-slide {
     display: flex;
     position: relative;
-    background-image: url("../../img/waves.jpg");
+    //background-image: url("../../img/waves.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     flex-direction: column;
-    padding: 40px 0;
-    border-top: 15px white solid;
+    //padding: 40px 0;
+    //border-top: 15px white solid;
 
     * {
       margin-block-start: 0;
@@ -1731,12 +1731,13 @@ h1, h2, h3, h4, h5, h6, span, a, li {
 
     .image-object {
       position: absolute;
-      right: 48%;
-      top: 20px;
+      left: 10%;
+      top: calc(50% - 249px);
       width: 330px;
       padding: 20px;
       transition: 0.3s ease;
       filter: drop-shadow(-15px 0 16px #444444aa);
+      z-index: 8;
 
       img {
         width: 100%;
